--- a/config.json
+++ b/config.json
@@ -1,28 +1,37 @@
 {
   "public": {
     "default": {
-      "commerce-core-endpoint": "https://edge-graph.adobe.io/api/d7eaa027-c714-4266-a629-7f5a4ce2dc6c/graphql",
-      "commerce-endpoint": "https://edge-graph.adobe.io/api/d7eaa027-c714-4266-a629-7f5a4ce2dc6c/graphql",
+      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/NiMuPicDkGiXhub4u2ahNH/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/NiMuPicDkGiXhub4u2ahNH/graphql",
       "headers": {
+        "all": {
+          "Store": "default"
+        },
         "cs": {
-          "Magento-Customer-Group": "b6589fc6ab0dc82cf12099d1c2d40ab994e8410c",
-          "Magento-Store-Code": "main_website_store",
-          "Magento-Store-View-Code": "default",
-          "Magento-Website-Code": "base",
-          "x-api-key": "4dfa19c9fe6f4cccade55cc5b3da94f7",
-          "Magento-Environment-Id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a"
+          "AC-View-ID": "ddc78db3-1fb1-49b5-9a12-03d005f89dc2",
+          "AC-Price-Book-ID": "us",
+          "AC-Source-Locale": "en"
         }
       },
       "analytics": {
         "base-currency-code": "USD",
-        "environment": "Production",
-        "store-id": 1,
-        "store-name": "Main Website Store",
-        "store-url": "https://main--EndClothing--stephen-garner-adobe.aem.live/",
-        "store-view-id": 1,
-        "store-view-name": "Default Store View",
-        "website-id": 1,
-        "website-name": "Main Website"
+        "environment": "Testing",
+        "environment-id": "NiMuPicDkGiXhub4u2ahNH",
+        "store-code": "YOUR_STORE_CODE",
+        "store-id": "YOUR_STORE_ID",
+        "store-name": "YOUR_STORE_NAME",
+        "store-url": "YOUR_STORE_URL",
+        "store-view-code": "YOUR_STORE_VIEW_CODE",
+        "store-view-id": "YOUR_STORE_VIEW_ID",
+        "store-view-name": "YOUR_STORE_VIEW_NAME",
+        "website-code": "YOUR_WEBSITE_CODE",
+        "website-id": "YOUR_WEBSITE_ID",
+        "website-name": "YOUR_WEBSITE_NAME"
+      },
+      "plugins": {
+        "picker": {
+          "rootCategory": "2"
+        }
       }
     }
   }
