--- a/config.json
+++ b/config.json
@@ -10,7 +10,8 @@
         "cs": {
           "AC-View-ID": "ddc78db3-1fb1-49b5-9a12-03d005f89dc2",
           "AC-Price-Book-ID": "us",
-          "AC-Source-Locale": "en"
+          "AC-Source-Locale": "en",
+          "AC_ENVIRONMENT_ID": "NiMuPicDkGiXhub4u2ahNH"
         }
       },
       "analytics": {
