--- a/config.json
+++ b/config.json
@@ -11,7 +11,9 @@
           "AC-View-ID": "ddc78db3-1fb1-49b5-9a12-03d005f89dc2",
           "AC-Price-Book-ID": "us",
           "AC-Source-Locale": "en",
-          "AC-ENVIRONMENT-ID": "NiMuPicDkGiXhub4u2ahNH"
+          "AC-ENVIRONMENT-ID": "NiMuPicDkGiXhub4u2ahNH",
+          "AC-Locale-Source": "default",
+          "Magento-Store-View-Code": "default"
         }
       },
       "analytics": {
